# cxx_project_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.githooks/: pre-commit
